`getRandomColor` should return `""`